tests/ui/type-alias-impl-trait/issue-74761-2.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-74761-2.rs:7:6
   |
LL | impl<'a, 'b> A for () {
   |      ^^ unconstrained lifetime parameter

error[E0207]: the lifetime parameter `'b` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-74761-2.rs:7:10
   |
LL | impl<'a, 'b> A for () {
   |          ^^ unconstrained lifetime parameter

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0207`.
